fix broken header behavior on small screens

--- a/css/demo.css
+++ b/css/demo.css
@@ -109,8 +109,8 @@ h5 span{
     font-size: 11px;
     padding: 20px 0px;
     text-transform:uppercase;
-    width: 390px;
-    height:55px;
+    width: 30px;
+    height:10px;
     margin: 0 auto;
 }
 .more ul{
